# project-mask

./: .gitignore  CLAUDE.md  PLAN.md  pyproject.toml  requirements.txt
.replay/: session_20260129_044942.json  test_session_001.json  test_session_002_multifile.json
calculator_test/: calculator.py
capture/: __init__.py  capture_tool.py  cli.py
config/: __init__.py  default.yaml
intervention/: __init__.py  analyzer.py  orchestrator.py  recovery.py  remediation.py  screenshot.py  stuck_detector.py  verifier.py
openspec/: project.md
openspec/changes/add-ai-intervention/: design.md  proposal.md  tasks.md
openspec/changes/add-ai-intervention/specs/ai-intervention/: spec.md
openspec/changes/implement-core-system/: design.md  proposal.md  tasks.md
openspec/changes/implement-core-system/specs/capture-tool/: spec.md
openspec/changes/implement-core-system/specs/input-backend/: spec.md
openspec/changes/implement-core-system/specs/replay-engine/: spec.md
openspec/changes/implement-core-system/specs/session-orchestrator/: spec.md
openspec/changes/implement-core-system/specs/upwork-controller/: spec.md
openspec/changes/implement-core-system/specs/vscode-controller/: spec.md
orchestrator/: __init__.py  session_orchestrator.py
replay/: __init__.py  cli.py  input_backend.py  replay_engine.py  vscode_controller.py
scripts/: calibrate_upwork.py  install_deps.sh  mask-daemon.service  replay_with_intervention.py  setup_pi5.sh  setup_vultr.sh  test_input.py  test_replay.py
test_project/: hello.py
tests/: __init__.py
upwork/: __init__.py  upwork_controller.py
utils/: __init__.py  string_utils.py
